package com.gerald.api.gatewawy;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

/**
 * Created by Gerald_Yang on 2017/9/12.
 */
@SpringBootApplication
public class App {
  public App() {
  }

  public static void main(String[] args) {
    SpringApplication.run(App.class, args);
  }
}
