package com.gerald.api.gatewawy;

/**
 * Created by Gerald_Yang on 2017/9/12.
 */
public class MobileProduct {
  private String price;

  public MobileProduct() {
  }

  public String getPrice() {
    return price;
  }

  public void setPrice(String price) {
    this.price = price;
  }
}
